monkeys/daltons-escape/deployments/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "chaos-test-daltons-egress-deny"
spec:
  endpointSelector:
    matchLabels:
      name: chaos-daltons-egress-world
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
